salesforce/force-app/main/default/objects/ConnectedOrg__c/ConnectedOrg__c.object-meta.xml
<CustomObject>
    <description>A remote Salesforce org that OrgPrism can scan via Named Credential. Lets consulting firms manage many client orgs from one install.</description>
    <label>Connected Org</label>
    <nameField>
        <label>Connected Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connected Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>