salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/CapabilityProbedAt__c.field-meta.xml
<CustomField>
    <fullName>CapabilityProbedAt__c</fullName>
    <description>Phase 25 — Timestamp of the most recent successful OrgCapabilityProbe. Null means the org has never been profiled (legacy connection before this feature shipped, or probe failed).</description>
    <label>Capability Probed At</label>
    <type>DateTime</type>
</CustomField>