salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>InstanceUrl__c</fullName>
    <label>Instance URL</label>
    <description>e.g. https://acme.my.salesforce.com</description>
    <required>true</required>
    <type>Url</type>
</CustomField>