salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/LastConnectedAt__c.field-meta.xml
<CustomField>
    <fullName>LastConnectedAt__c</fullName>
    <label>Last Connected At</label>
    <type>DateTime</type>
</CustomField>