salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/LastError__c.field-meta.xml
<CustomField>
    <fullName>LastError__c</fullName>
    <label>Last Error</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>