salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <label>Named Credential</label>
    <description>The DeveloperName of the Named Credential pointing to this org (e.g. "Acme_Production"). Configured in Setup before adding the row here.</description>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>