salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <description>Which Salesforce Revenue Cloud products this org runs. Multi-select — one org can have CPQ + Billing + ARM all together.</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ+Billing</fullName>
                <label>CPQ + Billing</label>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <label>None (no Revenue Cloud installed)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>