salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/RemoteOrgId__c.field-meta.xml
<CustomField>
    <fullName>RemoteOrgId__c</fullName>
    <label>Remote Org ID</label>
    <description>Populated automatically on first successful connection — confirms which org is on the other end of the Named Credential.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>