salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/RemoteOrgName__c.field-meta.xml
<CustomField>
    <fullName>RemoteOrgName__c</fullName>
    <label>Remote Org Name</label>
    <description>Populated automatically on Test Connection from Organization.Name on the remote org. Preferred over the local Connected Org record Name for display so the card always shows the actual remote org's name.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>