salesforce/force-app/main/default/objects/ConnectedOrg__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Tested</fullName>
                <default>true</default>
                <label>Not Tested</label>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Auth Failed</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>